<resources>
    <string name="app_name">BreakTime Alarm</string>
    <string name="weekdays">Weekdays</string>
    <string name="time_start">10:35</string>
    <string name="time_end">16:50</string>
    <string name="save">save</string>
    <string name="alarm_edit_begin">Begin at</string>
    <string name="alarm_edit_stop">Stop at</string>
    <string name="alarm_title">Alarm title</string>
    <string name="repeat">Repeat</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="time_interval">00:40</string>
    <string name="ring_hint">Stretch your body!</string>
</resources>