<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:padding="12dp"
    android:layout_marginTop="12dp"
    android:background="@drawable/bg_border"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/sub_top"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/ic_dot"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_dot"
            android:layout_width="10dp"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/tv_alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/ic_dot"
            android:textSize="15sp"
            android:text="Lable" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_top"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/tv_alarm_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="From"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_alarm_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/tv_alarm_from"
            android:text="@string/time_start"
            android:textColor="@color/darkgreen"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_alarm_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_alarm_time_start"
            android:text="@string/weekdays"
            android:textColor="@color/darkgreen" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/tv_alarm_time_start">

            <TextView
                android:id="@+id/tv_alarm_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="To"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_alarm_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/tv_alarm_end"
                android:text="@string/time_end"
                android:textColor="@color/darkgreen"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tv_alarm_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_alarm_time_end"
                android:text="Every" />

            <TextView
                android:id="@+id/tv_alarm_time_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_alarm_interval"
                android:layout_below="@id/tv_alarm_time_end"
                android:layout_marginStart="15dp"
                android:text="@string/time_interval" />

        </RelativeLayout>


    </RelativeLayout>

    <Switch
        android:id="@+id/sw_alarm_item_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</RelativeLayout>